--- a/tpls/login_2.html
+++ b/tpls/login_2.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../index_1.css">
-    <title>index_1</title>
+    <link rel="stylesheet" href="../login_2.css">
+    <title>login_2</title>
     <meta charset = "utf-8">
     <!--width - 可视区域的宽度，值可为数字或关键词device-width -->
     <!--height - viewport的高度-->
@@ -42,13 +42,12 @@
     <meta name="msapplication-tap-highlight" content="no">
 </head>
 <body>
-    <div class="dialog"></div>
-    <textarea name="" id="" cols="30" rows="10"></textarea>
-    <div class="submit">发送</div>
-<!-- bower:js -->
+    <div class="container">
+        <div class="userName">用户名：</div>
+        <input type="text" class="nameVal">
+    </div>
+    <div class="submit">确认</div>
 <script src="../jquery/dist/jquery.js"></script>
-<!-- endbower -->
-<script src = "../socket/socket.js"></script>
-<script src = "../index_1.js"></script>
+<script src = "../login_1.js"></script>
 </body>
 </html>
