--- a/tpls/login.html
+++ b/tpls/login.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../login.css">
-    <title>登陆页</title>
-    <meta charset = "utf-8">
+    <title id = "title">登陆页</title>
+    <meta charset="utf-8">
     <!--width - 可视区域的宽度，值可为数字或关键词device-width -->
     <!--height - viewport的高度-->
     <!--initial-scale - 初始的缩放比例-->
     <!--minimum-scale - 允许用户缩放到的最小比例-->
     <!--maximum-scale - 允许用户缩放到的最大比例-->
     <!--user-scalable - 用户是否可以手动缩放-->
-    <meta name = "viewport" content = "width = device-width, initial-scale = 1.0, maximum-scale = 1.0, user-scalable = 0" />
+    <meta name="viewport" content="width = device-width, initial-scale = 1.0, maximum-scale = 1.0, user-scalable = 0" />
     <!--content="telephone=yes" 在iPhone 手机上默认值是（电话号码显示为拨号的超链接）：-->
     <!--可将telephone=no，则手机号码不被显示为拨号链接-->
     <!--使设备浏览网页时对数字不启用电话功能（不同设备解释不同，itouch点击数字为存入联系人，iphone为拨打电话），忽略将页面中的数字识别为电话号码。-->
@@ -41,13 +42,24 @@
     <!-- windows phone 点击无高光 -->
     <meta name="msapplication-tap-highlight" content="no">
 </head>
+
 <body>
-    <div class="container">
-        <div class="userName">用户名：</div>
-        <input type="text" class="nameVal">
+    <div class="login">
+        <div class="container">
+            <div class="userName">用户名：</div>
+            <input type="text" class="nameVal">
+        </div>
+        <div class="submit">确认</div>
     </div>
-    <div class="submit">确认</div>
-<script src="../jquery/dist/jquery.js"></script>
-<script src = "../login.js"></script>
+    <div class="talkTime">
+        <div class="dialog"></div>
+        <textarea name="" id="" cols="30" rows="10"></textarea>
+        <div class="submit_talk">发送</div>
+        <div class="logout">登出</div>
+    </div>
+    <script src="../jquery/dist/jquery.js"></script>
+    <script src="../socket/socket.js"></script>
+    <script src="../login.js"></script>
 </body>
+
 </html>
