--- a/tpls/login.html
+++ b/tpls/login.html
@@ -57,9 +57,12 @@
         <div class="submit_talk">发送</div>
         <div class="logout">登出</div>
     </div>
-    <script src="../jquery/dist/jquery.js"></script>
-    <script src="../socket/socket.js"></script>
-    <script src="../login.js"></script>
+    <script src = "../jquery/dist/jquery.js"></script>
+    <script src = "../lodash/lodash.js"></script>
+    <script src = "../encrypt/gibberish-aes.js"></script>
+    <script src = "../encrypt/jsencrypt.js"></script>
+    <script src = "../socket/socket.js"></script>
+    <script src = "../login.js"></script>
 </body>
 
 </html>
