添加更多的场景判断

--- a/tpls/login.html
+++ b/tpls/login.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <link href="../qq.png" mce_href="favicon.ico" rel="icon" type="image/x-icon" />
     <link rel="stylesheet" href="../login.css">
     <title id = "title">登陆页</title>
     <meta charset="utf-8">
