--- a/tpls/login.html
+++ b/tpls/login.html
@@ -54,7 +54,7 @@
     </div>
     <div class="talkTime">
         <div class="dialog"></div>
-        <textarea name="" id="" cols="30" rows="10"></textarea>
+        <textarea name="" id="textarea" cols="30" rows="10"></textarea>
         <div class="submit_talk">发送</div>
         <div class="logout">登出</div>
     </div>
